src/test/resources/programs/invalid/parser/StaticIndexingOperator.kool
class Test {

    Def static [](index: Int) = return 1 // res: P2001
    Def static []=(index: Int, value: Int) = {} // res: P2001

}